--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -74,7 +74,7 @@
         "            return False\n",
         "    return True"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "source": [
         "from math import sqrt"
       ],
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
       "source": [
         "import math"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "        j = j + 1  # There's a Python abbreviation for this:  j += 1.\n",
         "    return True"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -458,19 +458,19 @@
         "%timeit is_prime_fast(1000003)"
       ],
       "metadata": {
-        "id": "ayZs484bEkws",
-        "outputId": "3c8cd34c-fd0c-4313-f38e-81d02c0ba36c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ayZs484bEkws",
+        "outputId": "d41fab31-3ac1-482b-d013-b7d6d340c36d"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "162 µs ± 7.14 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+            "202 µs ± 57.3 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
           ]
         }
       ]
@@ -507,11 +507,11 @@
         "%timeit is_prime_slow(1000003)"
       ],
       "metadata": {
-        "id": "WinObmsuEogQ",
-        "outputId": "2ecd7a86-6a3c-4f2f-b531-3af4643a8a21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WinObmsuEogQ",
+        "outputId": "2ecd7a86-6a3c-4f2f-b531-3af4643a8a21"
       },
       "execution_count": 11,
       "outputs": [
@@ -557,18 +557,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d3ccbbbb-3c8b-469c-dc62-f0643eee68d7"
+        "outputId": "bfe41101-6134-4460-ce12-f501f3c1c734"
       },
       "source": [
         "%timeit is_prime_fast(1000003)"
       ],
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "175 µs ± 47.2 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+            "176 µs ± 46.4 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
           ]
         }
       ]
@@ -679,7 +679,7 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -810,12 +810,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cdd20ca-0a68-4c64-f5a1-debe00aeff1b"
+        "outputId": "a6918646-010d-4a28-9345-95529812f988"
       },
       "source": [
         "is_prime_fast(10**14 + 37) # This might get a bit of delay."
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 10
         }
       ]
     },
@@ -868,7 +868,7 @@
       "metadata": {
         "id": "kCyjxVhxSSPS"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -900,23 +900,24 @@
         "input2 = 77\n",
         "print(\"1. Is {} prime? {}. Is {} prime? {}\".format(input1, is_prime_fast(input1), input2, is_prime_fast(input2)))\n",
         "%timeit is_prime_fast(1000003)\n",
-        "\n"
+        "print(\"--> This instance of is_prime_fast() runs in the nanoseconds of time, rather than previously running in the microseconds of time.\")\n"
       ],
       "metadata": {
         "id": "FI8SYIbptsIC",
-        "outputId": "fb3613e7-2d94-4f71-df6d-87a1dee7a078",
+        "outputId": "26ccd4f9-9c0d-4df9-c57f-0d10172a6d1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "1. Is 4 prime? False. Is 77 prime? False\n",
-            "626 ns ± 9.75 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+            "629 ns ± 15.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "--> This instance of is_prime_fast() runs in the nanoseconds of time, rather than previously running in the microseconds of time.\n"
           ]
         }
       ]
