--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -933,33 +933,33 @@
         "  print(\"10^{}: \".format(i+1), end=\"\")\n",
         "  %timeit is_prime_fast(L[i])\n",
         "\n",
-        "print(\"There doesn't appear to be a major difference between 10 and 10 billion\")"
+        "print(\"-->There doesn't appear to be a major difference between 10 and 10 billion\")"
       ],
       "metadata": {
         "id": "XenXh03wTa1N",
-        "outputId": "617dd3a3-53d1-41e4-be8f-4c8a6841aeeb",
+        "outputId": "52313953-73c9-4e00-9237-ab979ddce81e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2. Testing the is_prime_fast() function:\n",
-            "10^1: 210 ns ± 8.38 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^2: 205 ns ± 6.13 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^3: 205 ns ± 5.39 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^4: 210 ns ± 12.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^5: 260 ns ± 92.5 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^6: 325 ns ± 107 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^7: 205 ns ± 3.66 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^8: 208 ns ± 2.9 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^9: 209 ns ± 7.67 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "10^10: 254 ns ± 8.83 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
-            "There doesn't appear to be a major difference between 10 and 10 billion\n"
+            "10^1: 210 ns ± 9.05 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^2: 405 ns ± 57.2 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^3: 209 ns ± 7.93 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^4: 205 ns ± 4.49 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^5: 258 ns ± 119 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^6: 205 ns ± 3.89 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^7: 207 ns ± 6.24 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^8: 253 ns ± 79.8 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^9: 332 ns ± 111 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "10^10: 246 ns ± 4.19 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+            "-->There doesn't appear to be a major difference between 10 and 10 billion\n"
           ]
         }
       ]
@@ -978,37 +978,60 @@
         "    return (sqrt(n)%1 == 0)\n",
         "  else:\n",
         "    return False\n",
-        "\n",
-        "input = 100\n",
-        "print(\"3. Is {} square? {}.\".format(input, is_square(input)))\n",
         "      "
       ],
       "metadata": {
-        "id": "vfnvmP1kUm81",
-        "outputId": "80c73837-1665-4805-b339-81bb16987a3b",
+        "id": "vfnvmP1kUm81"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit is_square(10**32)"
+      ],
+      "metadata": {
+        "id": "7uU64m45_8vL",
+        "outputId": "3c00891c-9e23-4cf3-e321-9f66e87ec570",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3. Is 100 square? True.\n"
+            "1.02 µs ± 324 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "input = 10**32\n",
+        "print(\"3. Is {} square? {}.\".format(input, is_square(input)))"
+      ],
       "metadata": {
-        "id": "c7W9m8MkViQp"
+        "id": "OulfZu4sAJtU",
+        "outputId": "961fc165-3685-4ab4-d196-2fba82110a1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3. Is 100000000000000000000000000000000 square? True.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
