--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -992,11 +992,11 @@
         "%timeit is_square(10**32)"
       ],
       "metadata": {
-        "id": "7uU64m45_8vL",
-        "outputId": "3c00891c-9e23-4cf3-e321-9f66e87ec570",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7uU64m45_8vL",
+        "outputId": "3c00891c-9e23-4cf3-e321-9f66e87ec570"
       },
       "execution_count": 52,
       "outputs": [
@@ -1016,11 +1016,11 @@
         "print(\"3. Is {} square? {}.\".format(input, is_square(input)))"
       ],
       "metadata": {
-        "id": "OulfZu4sAJtU",
-        "outputId": "961fc165-3685-4ab4-d196-2fba82110a1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OulfZu4sAJtU",
+        "outputId": "961fc165-3685-4ab4-d196-2fba82110a1c"
       },
       "execution_count": 53,
       "outputs": [
@@ -1070,7 +1070,7 @@
       "source": [
         "L = [0,'one',2,'three',4,'five',6,'seven',8,'nine',10]"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -1088,7 +1088,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "P6pVVcg7o1Nn",
-        "outputId": "d26e4d5f-abc7-44bb-e1ae-c23bb8940122",
+        "outputId": "bcf175c1-0127-4db8-ab4f-d4288fd1a5b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1097,7 +1097,7 @@
       "source": [
         "L[3]"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 55
         }
       ]
     },
@@ -1260,7 +1260,10 @@
         "id": "pVI66GEIo1No"
       },
       "source": [
-        "You can also use Python to find the sum of a list of numbers."
+        "\n",
+        "\n",
+        "You can also use Python to find the sum of a list of numbers.\n",
+        "\n"
       ]
     },
     {
@@ -1332,7 +1335,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8QNDpqJ9o1No",
-        "outputId": "03cad007-fdc8-4df4-d448-633925351ce7",
+        "outputId": "2b34b7d8-55e0-4765-fa99-196701305667",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1340,7 +1343,7 @@
       "source": [
         "L[0:5]"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1353,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 56
         }
       ]
     },
@@ -1358,7 +1361,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "gzEnfHqvo1No",
-        "outputId": "ef43a34f-0d27-4c7d-d0bb-5daa7d4dce33",
+        "outputId": "dd1777f5-db45-4b65-9888-e5c13564511b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1366,7 +1369,7 @@
       "source": [
         "L[5:11]  # Notice that L[0:5] and L[5:11] together recover the whole list."
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1376,7 +1379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 57
         }
       ]
     },
@@ -1384,7 +1387,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "MOzb4reTo1No",
-        "outputId": "bd4c42d2-9521-4784-ad57-6558b0edb26b",
+        "outputId": "0077fd89-d32f-4a11-85c2-38e07d5645ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1392,7 +1395,7 @@
       "source": [
         "L[3:7]"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1402,9 +1405,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 58
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**$\\rightarrow$ LEFT OFF REVIEWING HERE**"
+      ],
+      "metadata": {
+        "id": "Hb2Rbo-CFRz-"
+      }
     },
     {
       "cell_type": "markdown",
