--- a/Classwork_2_28_23.ipynb
+++ b/Classwork_2_28_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjVb968L10/ajUKsgsLHce",
+      "authorship_tag": "ABX9TyOxdknX95RieZoRUQafGAOm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,6 +303,12 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
         "**Numerical:** \n",
         "\n",
         "rocket thrust 0...high → palette can be black to bright orange\n",
@@ -314,7 +320,19 @@
         "\n",
         "**Categorical:**\n",
         "\n",
-        "A finite number of 'categories' → discrete"
+        "A finite number of 'categories' → discrete colors\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Data → stuff you see\n",
+        "\n",
+        "\n",
+        "Position can be (x, y) , (r, Θ)\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "YBe2KARFqQg0"
