--- a/Classwork_2_28_23.ipynb
+++ b/Classwork_2_28_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxdknX95RieZoRUQafGAOm",
+      "authorship_tag": "ABX9TyMisvFosSLnwH3aRqFJXLzI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,7 +329,15 @@
         "Data → stuff you see\n",
         "\n",
         "\n",
-        "Position can be (x, y) , (r, Θ)\n",
+        "**Representing data:**\n",
+        "\n",
+        "Position → (x, y) , (r, Θ)\n",
+        "\n",
+        "Color → RGB, Hue, Brightness, Transparency\n",
+        "\n",
+        "Shape & dot-size\n",
+        "\n",
+        "⋆*3D graphs are generally something to avoid. Keep things 2D.*\n",
         "\n",
         "---\n",
         "\n"
