--- a/Classwork_2_28_23.ipynb
+++ b/Classwork_2_28_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlTLw9KV06u2FfKTEtTqsu",
+      "authorship_tag": "ABX9TyOaJ9NNJ7ubEkkvNIWUrTDv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RRGeb10LiXo7"
       },
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "_-ypnBLAivM1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "k4208DVbi1iZ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "pxNAa8jMjfTg"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "id": "RU1XxaCfj9Nt",
         "outputId": "45415c35-844a-4572-e22f-81094a775fa5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "zmVKydnEkpXB"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "id": "dB7yPXI5nYhW",
         "outputId": "2cd95037-27e3-4131-e950-89084b447817"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -279,7 +279,7 @@
         "id": "OOKxidc0pFk5",
         "outputId": "b7755b79-fad4-4ebe-b5c3-e75da8c5a969"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,9 +352,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "n_array = np.arange(1,1000000)\n",
+        "s_array = np.sqrt(n_array)\n",
+        "e_array = s_array-np.floor(s_array)"
+      ],
       "metadata": {
         "id": "nljVkydipJrs"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "u_list = np.random.uniform(-10,10,10000)\n",
+        "d_list = np.random.randint(-10,10,1000)\n",
+        "n_list = np.random.normal(loc=1, scale=3, size=10000)\n",
+        "p_list = ___.poisson(lam=3, size=10000)\n",
+        "plt.hist(any_list, bins=_)"
+      ],
+      "metadata": {
+        "id": "LeSWfHy00Iui"
       },
       "execution_count": null,
       "outputs": []
