--- a/Classwork_2_28_23.ipynb
+++ b/Classwork_2_28_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWs+mdOT2sf2/HhOscTrhx",
+      "authorship_tag": "ABX9TyMGun+LC9a7VxQaxyyyvMk6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -613,6 +613,25 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Some more useful programming statments:\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LFkQ0FwUN_8H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "u_list = np.random.uniform(-10,10,10000)\n",
@@ -623,6 +642,26 @@
       ],
       "metadata": {
         "id": "SuO0so5H4s-s"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Another useful package is Seaborn.**\n",
+        "\n",
+        "https://seaborn.pydata.org/"
+      ],
+      "metadata": {
+        "id": "iCPKEbvCOR9b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "B_FzkHklOXcp"
       },
       "execution_count": null,
       "outputs": []
