--- a/Classwork_2_28_23.ipynb
+++ b/Classwork_2_28_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGun+LC9a7VxQaxyyyvMk6",
+      "authorship_tag": "ABX9TyOz6Zkir4rUVSgBRclQ6+dG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -655,6 +655,15 @@
       ],
       "metadata": {
         "id": "iCPKEbvCOR9b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Notably useful theorem: **Central Limit Theorem**"
+      ],
+      "metadata": {
+        "id": "zguk88YjOgAh"
       }
     },
     {
