--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3111,11 +3111,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "Gvsm-VRYBv3e",
-        "outputId": "595d98fb-1689-4e22-f21f-2e6a08aed1da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Gvsm-VRYBv3e",
+        "outputId": "595d98fb-1689-4e22-f21f-2e6a08aed1da"
       },
       "execution_count": 105,
       "outputs": [
@@ -3161,7 +3161,7 @@
         "\n",
         "→ We will then subtract 1, which is reliant on the idea of arrays being $(n+1)$ in length.\n",
         "\n",
-        "→ We will then divide this by $2p$. This will return how many multiples of $2p$ there are within the distance between $p^2$ and $n$. We are only counting the evens.\n",
+        "→ We will then divide this by $2p$. This will return how many multiples of $2p$ there are within the distance between $p^2$ and $n$. We are only counting the odd multiples - which is why we are using $2p$ rather than just $p$.\n",
         "\n",
         "→ Finally, we floor the answer and then add 1 in order to get a realistic number of odd multiples.\n",
         "\n",
