--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3149,27 +3149,48 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
         "1. In order to prove this, we must first understand what $f(x) = \\lfloor \\frac{n - p^2 - 1}{2p} \\rfloor + 1$ is looking to do. Let's first put this equation $f(x)$ into words as in *Part A*, then we will compare it to the explained code portion in *Part B*.\n",
         "\n",
         "**Proof:**\n",
         "\n",
         "*(Part A)*\n",
         "\n",
-        "→ Given a natural number $n$. We choose a $p$ such that $p<n$.\n",
+        "→ $(i)$ Given a natural number $n$. We choose a $p$ such that $p<n$.\n",
         "\n",
-        "→ Let us subtract $p^2$ from $n$, leaving us just the distance from $p^2$ to $n$.\n",
+        "→ $(ii)$ Let us subtract $p^2$ from $n$, leaving us just the distance from $p^2$ to $n$.\n",
         "\n",
-        "→ We will then subtract 1, which is reliant on the idea of arrays being $(n+1)$ in length.\n",
+        "→ $(iii)$ We will then subtract 1, which is reliant on the idea of arrays being $(n+1)$ in length.\n",
         "\n",
-        "→ We will then divide this by $2p$. This will return how many multiples of $2p$ there are within the distance between $p^2$ and $n$. We are only counting the odd multiples - which is why we are using $2p$ rather than just $p$.\n",
+        "→ $(iv)$ We will then divide this by $2p$. This will return how many multiples of $2p$ there are within the distance between $p^2$ and $n$. We are only counting the odd multiples - which is why we are using $2p$ rather than just $p$.\n",
         "\n",
-        "→ Finally, we floor the answer and then add 1 in order to get a realistic number of odd multiples.\n",
+        "→ $(v)$ Finally, we floor the answer and then add 1 in order to get a realistic number of odd multiples.\n",
         "\n",
         "*(Part B)*\n",
         "\n",
         "We have `len(range(p*p, n, 2*p))` ≡ $f(x)$. Let's now break down the code from the inside out.\n",
         "\n",
-        "→ `range(a, b, c)` in this case takes in three inputs. `a` is the beginning of the range, `b` is the end of the range, and `c` is the steps to take.\n",
+        "→ $(i)$ `range(a, b, c)` in this case takes in three inputs. `a` is the beginning of the range, `b` is the end of the range, and `c` is the steps to take.\n",
+        "\n",
+        "→ $(ii)$ Given an integer $p < n$, we see that the range from `a` to `b` will span between $p^2$ and $n$, which correlates with step $(ii)$ of *Part A*.\n",
+        "\n",
+        "→ $(iii)$ We know that `c` is the length of steps to take as the program interates through the entire range `a` to `b`. This correlates directly with step $(iv)$ of *Part A*.\n",
+        "\n",
+        "→ $(iv)$ We can clearly see that `len(range(p*p, n, 2*p))` ≡ $f(x)$. They both go about getting the same result, but in two different ways.\n",
+        "\n",
+        "**In Conclusion**, by seeing how the formula $f(x)$ works in *Part A* and comparing it to how the `range()` code works in *Part B* we see they are equivalent in their results.\n",
+        "\n",
+        "Thus, `len(range(p*p, n, 2*p))` ≡ $f(x)$.   □\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
         "\n",
         "\n"
       ],
