--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3181,7 +3181,9 @@
         "\n",
         "→ $(iii)$ We know that `c` is the length of steps to take as the program interates through the entire range `a` to `b`. This correlates directly with step $(iv)$ of *Part A*.\n",
         "\n",
-        "→ $(iv)$ We can clearly see that `len(range(p*p, n, 2*p))` ≡ $f(x)$. They both go about getting the same result, but in two different ways.\n",
+        "→ $(iv)$ The `len()` portion of the code will simply get the overall length, or count, through the iteration of the range.\n",
+        "\n",
+        "→ $(v)$ We can clearly see that `len(range(p*p, n, 2*p))` ≡ $f(x)$. They both go about getting the same result, but in two different ways.\n",
         "\n",
         "**In Conclusion**, by seeing how the formula $f(x)$ works in *Part A* and comparing it to how the `range()` code works in *Part B* we see they are equivalent in their results.\n",
         "\n",
