--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3161,7 +3161,7 @@
         "\n",
         "*(Part A)*\n",
         "\n",
-        "→ $(i)$ Given a natural number $n$. We choose a $p$ such that $p<n$.\n",
+        "→ $(i)$ Given a natural number $n$. We choose a natural number $p$ such that $p<n$.\n",
         "\n",
         "→ $(ii)$ Let us subtract $p^2$ from $n$, leaving us just the distance from $p^2$ to $n$.\n",
         "\n",
