--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3204,12 +3204,12 @@
       "cell_type": "code",
       "source": [
         "def square_divides(num):\n",
-        "  if num != 0:\n",
+        "  if num == 0:\n",
+        "    return True\n",
+        "  elif num != 0:\n",
         "    for i in range(num):\n",
-        "      print(\"num {}\".format(num))\n",
-        "      if i+1 != 1:\n",
-        "        if num%(i+1)^2==0:\n",
-        "          print(\"{} divides {}\".format((i+1)^2, num))\n",
+        "      if (i+1) != 1:\n",
+        "        if num%(i+1)**2==0:\n",
         "          return True\n",
         "        else:\n",
         "          continue\n",
@@ -3217,49 +3217,38 @@
         "    return False\n",
         "\n",
         "def squarefree_list(n):\n",
-        "  list = [False]*(n+1)\n",
+        "  list = [True]*(n+1)\n",
         "  for i in range(n+1):\n",
         "    if square_divides(i):\n",
-        "      list[i] = True\n",
-        "      break\n",
-        "  print(list)\n",
-        "\n",
-        "print(\"2. \")\n",
-        "print(squarefree_list(5))\n",
-        "\n",
-        "\n",
-        " \n"
+        "      list[i] = False\n",
+        "  return list"
       ],
       "metadata": {
-        "id": "p1-fFT1yhtBD",
-        "outputId": "e633f332-ca04-4f60-f4d3-eee8ea63e637",
+        "id": "p1-fFT1yhtBD"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 12\n",
+        "print(\"2. square_free({}) returns: {}\".format(number, squarefree_list(number)))"
+      ],
+      "metadata": {
+        "id": "aZzOsMx20n5j",
+        "outputId": "6f4af478-543a-493e-892a-6c2ac03762c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2. \n",
-            "num 1\n",
-            "num 2\n",
-            "num 2\n",
-            "num 3\n",
-            "num 3\n",
-            "num 3\n",
-            "num 4\n",
-            "num 4\n",
-            "num 4\n",
-            "num 4\n",
-            "num 5\n",
-            "num 5\n",
-            "num 5\n",
-            "1 divides 5\n",
-            "[False, False, False, False, False, True]\n",
-            "None\n"
+            "2. square_free(12) returns: [False, True, True, True, False, True, True, True, False, False, True, True, False]\n"
           ]
         }
       ]
