--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3233,22 +3233,22 @@
       "cell_type": "code",
       "source": [
         "number = 12\n",
-        "print(\"2. square_free({}) returns: {}\".format(number, squarefree_list(number)))"
+        "print(\"2. squarefree_list({}) returns: {}\".format(number, squarefree_list(number)))"
       ],
       "metadata": {
-        "id": "aZzOsMx20n5j",
-        "outputId": "6f4af478-543a-493e-892a-6c2ac03762c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aZzOsMx20n5j",
+        "outputId": "148c0860-6914-420f-ecf1-348c6a829527"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2. square_free(12) returns: [False, True, True, True, False, True, True, True, False, False, True, True, False]\n"
+            "2. squarefree_list(12) returns: [False, True, True, True, False, True, True, True, False, False, True, True, False]\n"
           ]
         }
       ]
