--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3255,6 +3255,27 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "3. $(i)$ Each base pair would require two bits for storage.\n",
+        "\n",
+        "  bit 00 → A\n",
+        "\n",
+        "  bit 01 → T\n",
+        "\n",
+        "  bit 10 → G\n",
+        "\n",
+        "  bit 11 → C\n",
+        "\n",
+        "  $(ii)$ This would total to 6 billion bits for one person's DNA. Since a byte is 8 bits, this would require 1 Gigabyte ($8\\cdot10^9$ bits) to store a person's DNA.\n",
+        "\n",
+        "  $(iii)$ Depending on the size of the thumb drive, several people's DNA would fit. For example, a 256 Gigabyte thumb drive can store 2048 people's DNA ($\\frac{8\\cdot10^9\\cdot256}{1\\cdot10^9}$)."
+      ],
+      "metadata": {
+        "id": "-I9klP6O5yyU"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "hXac_vzPo1Nx"
       },
