--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -3329,10 +3329,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bdr1hcP0o1Ny",
-        "outputId": "d550b07e-1145-418f-8b06-e2a79149a4be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d550b07e-1145-418f-8b06-e2a79149a4be"
       },
       "source": [
         "len(primes) # Our population size.  A statistician might call it N."
@@ -3355,10 +3355,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wJs6DNcBo1Ny",
-        "outputId": "943eaee2-919f-422d-ec05-01d7c5ef1fd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "943eaee2-919f-422d-ec05-01d7c5ef1fd9"
       },
       "source": [
         "primes[-1]  # The last prime in our list, just before one million."
@@ -3382,10 +3382,10 @@
       "metadata": {
         "scrolled": true,
         "id": "7geu3XMoo1Ny",
-        "outputId": "a44d190e-e16d-4b12-d180-bea8ec9c4262",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a44d190e-e16d-4b12-d180-bea8ec9c4262"
       },
       "source": [
         "type(primes) # What type is this data?"
@@ -3408,10 +3408,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "siBIu-IGo1Ny",
-        "outputId": "6cd101fd-1ef6-47eb-f37f-3a4f2117aa3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6cd101fd-1ef6-47eb-f37f-3a4f2117aa3d"
       },
       "source": [
         "print(primes[:100]) # The first hundred prime numbers."
@@ -3442,10 +3442,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bINic7Ceo1Ny",
-        "outputId": "0d369e60-32ea-4c00-ec9c-863c61483e65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d369e60-32ea-4c00-ec9c-863c61483e65"
       },
       "source": [
         "redprimes = [p for p in primes if p%4 == 1] # Note the [x for x in LIST if CONDITION] syntax.\n",
@@ -3470,10 +3470,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "XXK10HG4o1Ny",
-        "outputId": "595dc16f-f1cd-4e85-bf0b-ae9f3f09a6b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "595dc16f-f1cd-4e85-bf0b-ae9f3f09a6b7"
       },
       "source": [
         "print(\"There are {} red primes and {} blue primes, up to 1 million.\".format(len(redprimes), len(blueprimes)))"
@@ -3524,10 +3524,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eCi28UhMo1Nz",
-        "outputId": "5843915f-a334-4101-d9a8-1e4a86a65a36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5843915f-a334-4101-d9a8-1e4a86a65a36"
       },
       "source": [
         "primes_upto(1000)  # There are 168 primes between 1 and 1000."
@@ -3583,10 +3583,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "n7oh0AAAo1Nz",
-        "outputId": "c5bb88f9-78f7-4f1b-a232-6f9e9695a377",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c5bb88f9-78f7-4f1b-a232-6f9e9695a377"
       },
       "source": [
         "x_values = numpy.linspace(-2,2,11)  # The argument 11 is the *number* of terms, not the step size!\n",
@@ -3629,10 +3629,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5LjKKSeZo1Nz",
-        "outputId": "cccf7d6c-ea75-4990-86c9-5a637b2cb330",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cccf7d6c-ea75-4990-86c9-5a637b2cb330"
       },
       "source": [
         "[1,2,3] + [1,2,3]"
@@ -3655,10 +3655,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qZFk1LBJo1Nz",
-        "outputId": "a504ae88-3de8-4521-8c27-e4d754ef007a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a504ae88-3de8-4521-8c27-e4d754ef007a"
       },
       "source": [
         "x_values + x_values"
@@ -3681,10 +3681,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LyesLSuPo1N0",
-        "outputId": "46db0bad-b122-4aa7-c94b-e13429ff7f0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46db0bad-b122-4aa7-c94b-e13429ff7f0b"
       },
       "source": [
         "y_values = x_values * x_values  # How is multiplication interpreted on numpy arrays?\n",
@@ -3714,11 +3714,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "tjB51noto1N0",
-        "outputId": "3ce70461-2460-49c4-bd0a-d92c023e6794",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "outputId": "3ce70461-2460-49c4-bd0a-d92c023e6794"
       },
       "source": [
         "%matplotlib inline\n",
@@ -3809,10 +3809,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "i2DlTbsho1N0",
-        "outputId": "5239ecc4-b6a1-4cd8-ddc2-75c888a4f5c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5239ecc4-b6a1-4cd8-ddc2-75c888a4f5c4"
       },
       "source": [
         "type(numpy.array([1,2,3]))  # For example."
@@ -3844,10 +3844,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Cq5kg4HPo1N0",
-        "outputId": "375c6aeb-25e6-407f-e598-e4beff3fda7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "375c6aeb-25e6-407f-e598-e4beff3fda7a"
       },
       "source": [
         "len(x_values) == len(pix_values)  # These better be the same, or else matplotlib will be unhappy."
@@ -3870,11 +3870,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "DEfDVt9Wo1N0",
-        "outputId": "272ab6ce-8844-4622-fb04-b46b1d761bf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "272ab6ce-8844-4622-fb04-b46b1d761bf7"
       },
       "source": [
         "%matplotlib inline\n",
@@ -3914,11 +3914,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "oTPTeUX4o1N1",
-        "outputId": "2f77e1ad-7991-4db8-d8ab-457a9531e138",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "2f77e1ad-7991-4db8-d8ab-457a9531e138"
       },
       "source": [
         "%matplotlib inline\n",
@@ -3971,11 +3971,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "-grvUV4so1N1",
-        "outputId": "32d36cfd-b4fb-4f7f-8fa7-ed0becb91b2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "32d36cfd-b4fb-4f7f-8fa7-ed0becb91b2f"
       },
       "source": [
         "%matplotlib inline\n",
@@ -4015,11 +4015,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YlSSqcDko1N1",
-        "outputId": "d57ff4c8-bbb4-43eb-f040-fd2bacd49234",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "d57ff4c8-bbb4-43eb-f040-fd2bacd49234"
       },
       "source": [
         "%matplotlib inline\n",
@@ -4064,11 +4064,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "NWQ3CIVwo1N1",
-        "outputId": "0e312f8b-9c23-4b5e-c4b5-9cb7f50a3c09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "0e312f8b-9c23-4b5e-c4b5-9cb7f50a3c09"
       },
       "source": [
         "%matplotlib inline\n",
@@ -4131,10 +4131,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Pgee6LGxo1N2",
-        "outputId": "4bd465ca-23b8-4a3a-c1eb-6c3ed43e19b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bd465ca-23b8-4a3a-c1eb-6c3ed43e19b2"
       },
       "source": [
         "print(primes_upto(1000000))  # The number of primes up to 1 million.\n",
@@ -4178,10 +4178,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "NHd3eV32o1N2",
-        "outputId": "951c3d8f-ffda-435c-e046-e123f725d002",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "951c3d8f-ffda-435c-e046-e123f725d002"
       },
       "source": [
         "len(primes) # The number of primes up to 1 million."
@@ -4227,10 +4227,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tqGLrNREo1N2",
-        "outputId": "45760586-e6c1-4da1-8808-429c28306de8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "45760586-e6c1-4da1-8808-429c28306de8"
       },
       "source": [
         "print(primegaps[:100])  # The first hundred prime gaps!"
@@ -4274,10 +4274,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "f4iyePe3o1N2",
-        "outputId": "4f1ee13c-4dc9-4a7c-d79a-ab287be1d683",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f1ee13c-4dc9-4a7c-d79a-ab287be1d683"
       },
       "source": [
         "print(L[:-1])\n",
@@ -4310,11 +4310,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "H2Ob8Jkro1N3",
-        "outputId": "ad9fe0f0-cd23-43a4-df19-19af3229a97d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 169
-        }
+        },
+        "outputId": "ad9fe0f0-cd23-43a4-df19-19af3229a97d"
       },
       "source": [
         "L[1:] - L[:-1]  # This will give a TypeError.  You can't subtract lists!"
@@ -4338,10 +4338,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lSkR4Dxho1N3",
-        "outputId": "3b659b94-6732-4d09-87a1-5f6974ae09b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b659b94-6732-4d09-87a1-5f6974ae09b6"
       },
       "source": [
         "numpy.array(L[1:]) - numpy.array(L[:-1])  # That's better.  See the gaps in the list [1,3,7,20] in the output."
@@ -4373,10 +4373,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "i9FFJvMbo1N3",
-        "outputId": "a15dd136-e8d0-4517-9394-d9b044799909",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a15dd136-e8d0-4517-9394-d9b044799909"
       },
       "source": [
         "print(len(primes))\n",
@@ -4407,10 +4407,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6V5Nj_MCo1N3",
-        "outputId": "ebeb5c8a-0ae5-4dff-8ef6-ce2c8452c05e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ebeb5c8a-0ae5-4dff-8ef6-ce2c8452c05e"
       },
       "source": [
         "max(primegaps)  # The largest prime gap that appears!"
@@ -4433,11 +4433,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "rOFsdO1Uo1N3",
-        "outputId": "1cc58779-653d-4aee-8f24-24c88f4f5ac7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "outputId": "1cc58779-653d-4aee-8f24-24c88f4f5ac7"
       },
       "source": [
         "%matplotlib inline\n",
@@ -4487,6 +4487,73 @@
         "2.  Does there seem to be a bias in the last digits of primes?  Note that, except for 2 and 5, every prime ends in 1,3,7, or 9.  Note: the last digit of a number `n` is obtained from `n % 10`.  \n",
         "\n",
         "3.  Read about the [\"Prime Conspiracy\"](https://www.quantamagazine.org/mathematicians-discover-prime-conspiracy-20160313), recently discovered by Lemke Oliver and Soundararajan.  Can you detect their conspiracy in our data set of primes?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def redprimes_upto(x):\n",
+        "  return [p for p in primes if (p%4==1 and p <= x)]\n",
+        "\n",
+        "def blueprimes_upto(x):\n",
+        "  return [p for p in primes if (p%4==3 and p <= x)]"
+      ],
+      "metadata": {
+        "id": "R3U_IEx1eV6V"
+      },
+      "execution_count": 122,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "redprimes_upto(100)"
+      ],
+      "metadata": {
+        "id": "29SGye1LelUM",
+        "outputId": "2a309f98-8725-4dc7-d8a6-d31a45b736ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 13, 17, 29, 37, 41, 53, 61, 73, 89, 97]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "blueprimes_upto(100)"
+      ],
+      "metadata": {
+        "id": "vQahWNysghj_",
+        "outputId": "7f5f4832-91a5-4e00-b3d8-2e4acb82bdd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 7, 11, 19, 23, 31, 43, 47, 59, 67, 71, 79, 83]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
+        }
       ]
     }
   ]
