--- a/P4M_Notebook_3.ipynb
+++ b/P4M_Notebook_3.ipynb
@@ -4654,12 +4654,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "xt9dVF61mhDc",
-        "outputId": "d6ac12c5-7d7c-4d26-9f81-df2a0e7bd3c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        }
+        },
+        "id": "xt9dVF61mhDc",
+        "outputId": "d6ac12c5-7d7c-4d26-9f81-df2a0e7bd3c0"
       },
       "execution_count": 159,
       "outputs": [
@@ -4684,6 +4684,19 @@
       ],
       "metadata": {
         "id": "ySi9vaqTnlu5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. This appears to be the case as in the following article:\n",
+        "\n",
+        "https://www.quantamagazine.org/mathematicians-discover-prime-conspiracy-20160313\n",
+        "\n",
+        "The graph coded above presents evenly distributed last digits, where in the case of the article it would make sense since each last digit would prefer a different last digit sequentially in order to keep the distribution as even as possible."
+      ],
+      "metadata": {
+        "id": "gspqo923sG_-"
       }
     },
     {
