--- a/Classwork_2_2_23.ipynb
+++ b/Classwork_2_2_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLyZTzFAtCNew7PM3liV8M",
+      "authorship_tag": "ABX9TyP3IGPX1QSvRjWFkKrj64Qb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,10 +163,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "⇑ This number should be pretty close to μ !\n",
+        "\n",
+        "Note: The sample mean should approach actual mean (μ) as length of sample approaches ∞."
+      ],
+      "metadata": {
+        "id": "WksPNNt0694K"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "K6nuOQOz6D4B"
+        "id": "-4yUuC8r7Y3K"
       },
       "execution_count": null,
       "outputs": []
