--- a/Classwork_2_2_23.ipynb
+++ b/Classwork_2_2_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvmXtguMTd499Z4azXAwuE",
+      "authorship_tag": "ABX9TyPNd7V/uVZ8v2fIIUJPBVe3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Central Limit Theorem**"
+        "##**Central Limit Theorem** → Very important theorem in probability (universally)"
       ],
       "metadata": {
         "id": "4QkGvYoJ5zl5"
