--- a/Classwork_3_7_23.ipynb
+++ b/Classwork_3_7_23.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNb/5hQ0p3px3vjaSESDQS/",
+      "authorship_tag": "ABX9TyPe8+9+ajNox+TDiJbhmvEH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -681,6 +681,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###**Circle**"
+      ],
+      "metadata": {
+        "id": "p-QUHWtau2kb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Anti-aliasing equation:**\n",
         "\n",
         "$f(x) = \\frac{1}{|x^2+y^2-1|}$\n",
@@ -778,7 +787,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**hyperbola**"
+        "###**Hyperbola**"
       ],
       "metadata": {
         "id": "6rGtEEjlrznT"
